--- a/app/views/outlines/edit.html.haml
+++ b/app/views/outlines/edit.html.haml
@@ -1,4 +1,9 @@
 %h1 Tweak this:
 
-= render 'outlines_form'
+%span stealth
+= check_box_tag('work-mode', value = '1', checked = false, :onclick => "$('#outlines-form').toggleClass('outlines-form outlines-form-discreet')")
+#outlines-form.outlines-form
+  = render 'outlines_form'
+
+
 = link_to 'Back', outlines_path
