add stealth mode to new view

--- a/app/views/outlines/edit.html.haml
+++ b/app/views/outlines/edit.html.haml
@@ -1,7 +1,8 @@
 %h1 Tweak this:
 
-%span stealth
+%span stealth mode
 = check_box_tag('work-mode', value = '1', checked = false, :onclick => "$('#outlines-form').toggleClass('outlines-form outlines-form-discreet')")
+
 #outlines-form.outlines-form
   = render 'outlines_form'
 
