--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,6 +12,6 @@
   =link_to 'home', root_path, id: "logo", class: 'home'
   - if signed_in?
     %span=link_to "Sign out, #{current_user.name}", signout_path, method: "delete", class: 'sign-out'
-    %span=link_to "new #{current_user.name} log", new_outline_path, class: 'new'
+    %span=#link_to "new #{current_user.name} log", new_outline_path, class: 'new'
   - else
     %span=link_to "Sign in", signin_path, class: 'sign-in'
