--- a/app/views/outlines/_outlines_form.html.haml
+++ b/app/views/outlines/_outlines_form.html.haml
@@ -1,12 +1,16 @@
+.form-button-div
+  %button#stealth-button{:title => "button"} Stealth
+  = link_to 'Back', outlines_path, class: "form-back-button"
+
 .form-container
   = form_for @outline do |f|
     %p.form-label
       = f.label :title
     %p.form-input
-      = f.text_field :title
+      = f.text_field :title, placeholder: 'Title'
     %p.form-label
       = f.label :log
     %p.form-input
       = f.text_area :log
     %br
-      = f.submit
+      = f.submit "Save", id: 'save-button'
