--- a/app/views/outlines/new.html.haml
+++ b/app/views/outlines/new.html.haml
@@ -1,10 +1,18 @@
--if current_user
-  %h1 create a new #{current_user.name} log
+.page-container
+  -if current_user
+    %h1 create a new #{current_user.name} log
 
-%span stealth mode
-= check_box_tag('work-mode', value = '1', checked = false, :onclick => "$('#outlines-form').toggleClass('outlines-form outlines-form-discreet')")
+  %span stealth mode
+  = check_box_tag('work-mode', value = '1', checked = false, :onclick => "$('#outlines-form').toggleClass('outlines-form outlines-form-discreet')")
 
-#outlines-form.outlines-form 
-  = render 'outlines_form'
+  #outlines-form.outlines-form 
+    = render 'outlines_form'
+  = link_to 'Back', outlines_path, class: 'new-back'
 
-= link_to 'Back', outlines_path
+  :javascript
+
+  $(document).ready(function(){
+    $('#stealth-button').click(function(){
+        $('#outlines-form').toggleClass("outlines-form outlines-form-discreet");
+    });
+  });
