--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -3,7 +3,7 @@
     - if current_user
       Welcome to your logs, #{current_user.name}
   .home-dashboard
-    = link_to "Need to sign up?", signup_path, class: "home-signup-btn"
-    = link_to "New log", new_outline_path, class: "home-new-link"
+    = link_to "Sign up", signup_path, class: "home-signup-btn"
+    = link_to "Write", new_outline_path, class: "home-new-link"
     - if current_user
-      = link_to "see all #{current_user.name} logs", outlines_path, class: "home-index-link"
+      = link_to "Read", outlines_path, class: "home-index-link"
