--- a/app/views/outlines/new.html.haml
+++ b/app/views/outlines/new.html.haml
@@ -2,12 +2,11 @@
   -if current_user
     %h1 create a new #{current_user.name} log
 
-  %span stealth mode
-  = check_box_tag('work-mode', value = '1', checked = false, :onclick => "$('#outlines-form').toggleClass('outlines-form outlines-form-discreet')")
+  / %span stealth mode
+  / =# check_box_tag('work-mode', value = '1', checked = false, :onclick => "$('#outlines-form').toggleClass('outlines-form outlines-form-discreet')")
 
   #outlines-form.outlines-form 
     = render 'outlines_form'
-  = link_to 'Back', outlines_path, class: 'new-back'
 
   :javascript
 
