--- a/app/views/outlines/edit.html.haml
+++ b/app/views/outlines/edit.html.haml
@@ -9,6 +9,8 @@
   $(document).ready(function(){
     $('#stealth-button').click(function(){
         $('#outlines-form').toggleClass("outlines-form outlines-form-discreet");
+        $('#title').hide();
+        $('.form-label').hide();
     });
   });
 
