--- a/app/views/outlines/show.html.haml
+++ b/app/views/outlines/show.html.haml
@@ -18,5 +18,7 @@
   $(document).ready(function(){
     $('#show-stealth-button').click(function(){
         $('#outline-log').toggleClass("outline-log outline-log-discreet");
+        $('#title').hide();
+        $('.form-label').hide();
     });
   });
