--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,14 @@ textarea {
   font-size: 1em;
 }
 
+th {
+  padding-bottom: 15px;
+}
+
+body {
+  padding-top: 5px;
+}
+
 .form-input {
   margin-bottom: 0;
 }
@@ -118,6 +126,10 @@ a {
   }
   }
 
+  .button-hide {
+    color: $lightGray;
+  }
+
 
 td {
   padding: 20px;
@@ -132,25 +144,33 @@ font-family: "AtlasTypewriterRegular",
              "Luxi Mono";
 }
 
-#navbar {
-  min-height: 45px;
-  background-color: black;
-  z-index: 100;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  margin-bottom: 30px;
-  a {
+.navbar {
+  .navbar-inner {
+    li {
+      display: inline-block;
+    }
+    ul {
+      padding-left: 0;
+    }
+    min-height: 59px;
     background-color: black;
-    color: white;
-    padding: 0;
-    font-size: 1.3em;
-    margin-left: 20px;
-    margin-top: 3px;
-    &:hover {
+    z-index: 100;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin-bottom: 30px;
+    a {
       background-color: black;
-      color: $mediumGray;
+      color: white;
+      padding: 0;
+      font-size: 1.3em;
+      margin-left: 20px;
+      margin-top: 3px;
+      &:hover {
+        background-color: black;
+        color: $mediumGray;
+      }
     }
   }
 }
