--- a/app/views/outlines/_outlines_form.html.haml
+++ b/app/views/outlines/_outlines_form.html.haml
@@ -5,9 +5,9 @@
 .form-container
   = form_for @outline do |f|
     %p.form-label
-      = f.label :title
+      = f.label :title, id: "title-label"
     %p.form-input
-      = f.text_field :title, placeholder: 'Title'
+      = f.text_field :title, placeholder: 'Title', id: "title-input"
     %p.form-label
       = f.label :log
     %p.form-input
