--- a/app/views/outlines/edit.html.haml
+++ b/app/views/outlines/edit.html.haml
@@ -11,6 +11,13 @@
         $('#outlines-form').toggleClass("outlines-form outlines-form-discreet");
         $('#title').hide();
         $('.form-label').hide();
+        $('#title-label').hide();
+        $('#title-input').hide();
+        $('#stealth-button').remove();
+        $('.form-back-button').remove();
+        $('.form-button-div').remove();
+        $('#logo').hide();
+        $('.sign-out').hide();
     });
   });
 
