--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,4 @@
-%h1 hey, #{@username}
-=link_to 'see your writings', outlines_path
-=link_to "Sign out", signout_path, method: "delete"
+.page-container
+  %h1 hey, #{@username}
+  =link_to 'see your writings', outlines_path
+  =link_to "Sign out", signout_path, method: "delete"
