--- a/app/views/outlines/edit.html.haml
+++ b/app/views/outlines/edit.html.haml
@@ -1,4 +1,4 @@
-.page-container
+.page-container#outlines-edit-page
   %h1 Tweak this:
   / =# check_box_tag('work-mode', value = '1', checked = false, :onclick => "$('#outlines-form').toggleClass('outlines-form outlines-form-discreet')")
 
