--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -5,11 +5,15 @@
       %h3 Your current color is: #{@current_color}
 
   .colors-container
-    .box.orange
-    .box.indigo
-    .box.amber
-    .box.lavender
-    .box.rose
+    .box{:value => 'orange'}
+    .box{:value => 'indigo'}
+    .box{:value => 'amber'}
+    .box{:value => 'lavender'}
+    .box{:value => 'rose'}
+    .box{:value => 'cinnamon'}
+    .box{:value => 'yellow'}
+    .box{:value => 'leaf'}
+    .box{:value => 'ocean'}
 
   .home-dashboard
     = link_to "Sign up", signup_path, class: "home-signup-btn"
@@ -21,7 +25,7 @@
 
   $(document).ready(function(){
     $('.box').click(function(){
-      console.log('box');
+      console.log(this);
       //POST color to user
     });
   });
