get box color on click

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -25,7 +25,8 @@
 
   $(document).ready(function(){
     $('.box').click(function(){
-      console.log(this);
+      var $clickedBox = $(this);
+      console.log($clickedBox.attr('value'));
       //POST color to user
     });
   });
