--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -33,11 +33,11 @@
         $.ajax({
         method: "PUT",
         url: updatePath,
-        data: { 'user': {'color': 'chosenColor' } },
+        data: { 'user': {'color': chosenColor } },
         dataType: 'JSON'
         })
         .success(function() {
-          console.log('done');
+          location.reload();
         });
     });
   });
