--- a/app/views/outlines/show.html.haml
+++ b/app/views/outlines/show.html.haml
@@ -1,4 +1,4 @@
-.page-container
+.page-container#outlines-show-page
   %button#show-stealth-button{:title => "button"} Stealth
   %h2.outline-title
     = @outline.title
