--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,4 +1,4 @@
-.center.hero-unit
+.center.hero-unit#home-page
   %h1.home-header
     - if current_user
       Welcome to your logs, #{current_user.name}
