--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -9,9 +9,9 @@
     .box{:value => 'indigo'}
     .box{:value => 'amber'}
     .box{:value => 'lavender'}
+    .box{:value => 'white'}
     .box{:value => 'rose'}
     .box{:value => 'cinnamon'}
-    .box{:value => 'yellow'}
     .box{:value => 'leaf'}
     .box{:value => 'ocean'}
 
